# gtk-calculator

./: CMakeLists.txt  LICENCE  README.md
src/: calculator.h  calculator_operand.c  calculator_operand.h  calculator_presenter.c  calculator_presenter.h  calculator_view.c  calculator_view.h  main.c
views/: calculator_window.glade  win_calculator.glade
